# ledger-xns

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  conanfile.txt
.github/workflows/: main.yml
tests/: json_parser.cpp  testcases.json  tx_parse.cpp  tx_validate.cpp  ui_output.cpp
tests/util/: common.cpp  common.h  testcases.cpp  testcases.h
